# libigl

./: .gitignore
cmake/: LibiglDownloadExternal.cmake  PrebuildExternalProject.cmake  libigl.cmake  libigl_build.bat  libigl_build.sh  mmg_prebuilt.sh
include/igl/: scaf.cpp
include/igl/mmg/: cdt.cpp  triangulate.cpp  triangulate.h
scripts/: libiglmmg.bat  libiglmmg.sh
tutorial/: CMakeLists.txt
tutorial/710_SCAF/: CMakeLists.txt
